--- a/Raul/static/Raul/shopping-cart.css
+++ b/Raul/static/Raul/shopping-cart.css
@@ -364,11 +364,17 @@ button, input, optgroup, select, textarea {
     color:#333333;
     font-weight: bold;
     cursor: pointer;
-    padding:8px;
-
+    padding:8px 10px;
+    border-radius: 5px;
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+    transition: 0.4s ease-in-out;
+}
+
+input:hover{
+    cursor: pointer;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.3);
 }
 
 .form .pull-right a{
@@ -489,6 +495,13 @@ button, input, optgroup, select, textarea {
     font-weight: bold;
     background-color: #cfbb63;
     outline: none;
+    border-radius: 5px;
+    transition: 0.4s ease-in-out;
+}
+
+.summary .buttonCheckout:hover{
+    cursor: pointer;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.3);
 }
 
 .summary input{
