--- a/Raul/static/Raul/style.css
+++ b/Raul/static/Raul/style.css
@@ -99,9 +99,9 @@ body{
 }
 
 
-/* *, ::after, ::before {
+*, ::after, ::before {
     box-sizing: border-box;
-} */
+}
 
 .productContainer{
 	max-width: 1300px;
@@ -210,7 +210,7 @@ h5{
 	width:120px;
 	background-color: rgba(0, 0, 0, 0.7);
 	color:white;
-	border-radius:40px;
+	border-radius:5px;
 	text-align: center;
 	position: relative;
 	top:80%;
