--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -58,7 +58,7 @@
             <div class ="menuGrid">
                 <div class="menuSections">
                     <div class ="menuItems">
-                        <p>____Organic Blend_____</p>
+                        <h1>Organic Blend</h1>
                         <p></p>
                     </div>
                     <div class="menuItems">
@@ -77,7 +77,7 @@
                 <div class="menuSections">
                     
                     <div class="menuItems">
-                         <p> ____EXPRESSO_BLEND_____</p>
+                         <h1>Expresso Blend</h1>
                     </div>
                     <div class="menuItems">
                         <p>Espresso ...... 2.75</p>
@@ -108,7 +108,7 @@
                 <div class="menuSections">
                     
                     <div class="menuItems">
-                        <p> ____Drinks_____</p>
+                        <h1> Drinks</h1>
                     </div>
                     <div class="menuItems">
                         <p>Chai Latte ...... 4.25</p>
@@ -133,7 +133,7 @@
                 <div class="menuSections">
                     
                     <div class="menuItems">
-                        <p> ____Extras_____</p>
+                        <h1>Extras</h1>
                     </div>
                     <div class="menuItems">
                         <p>Flavors:Vanilla, Hazelnut,Carmel ...... 2.50</p>
