--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,6 +11,13 @@
         src: url(avenir-lt-std-35-light.otf);
     }
 
+    input[type=text], input[type=password],input[type=email]{
+        border-radius: 5px;
+        padding:10px 27px;
+        outline: none;
+        border:none;
+    }
+
     html,body{
         margin:0;
         padding:0;
@@ -37,7 +44,7 @@
 
     .loginRegister{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: nowrap;
         justify-content: center;
         align-items: center;
@@ -45,17 +52,31 @@
     }
 
     .loginForm{
-        flex:1;
-        padding: 50px 40px;
+        padding:50px 0;
+        margin:0 auto;
+        width: 100%;
+        height:50vh;
+    }
+
+    .login-card{
         background-color: rgba(0, 0, 0, 0.2);
-        margin:0 40px;
+        padding:50px;
+        margin: 50px auto;
+        width:30vw;
     }
 
     .registerForm{
-        flex:1;
-        padding: 50px 40px;
+        padding:50px 0;
+        margin:100px auto;
+        width: 100%;
+        height:50vh;
+    }
+
+    .register-card{
         background-color: rgba(0, 0, 0, 0.2);
-        margin:0 40px;
+        padding:50px;
+        margin: 100px auto;
+        width:30vw;
     }
 
     .loginRegister label{
@@ -107,12 +128,68 @@
 
     }
 
+    form h4{
+        background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        margin-block-start: 5px;
+        margin-block-end: 5px;
+        font-size: 20px;
+    }
+
     .loginRegister .helptext{
         font-size:12px;
         background: -webkit-linear-gradient(#f8f18e,#d6a55b);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         text-align: center;
+    }
+
+    /* .loginRegister .button, button {
+        background: #cfbb63;
+        color: rgba(0, 0, 0, 0.6);
+        padding: 16px 64px;
+        outline: none;
+        border: none;
+        border-radius: 0;
+        font-weight: 700;
+        transition: 0.4s ease-in-out;
+        font-family: myFirstFont;
+        font-size: 20px;
+        margin:10px auto;
+    } */
+
+    .loginRegister .button, button {
+        background: #cfbb63;
+        color: rgba(0, 0, 0, 0.6);
+        padding: 16px 64px;
+        outline: none;
+        border: none;
+        border-radius: 0;
+        font-weight: 700;
+        transition: 0.4s ease-in-out;
+        font-family: myFirstFont;
+        font-size: 20px;
+        margin:10px auto;
+        border-radius: 5px;
+        transition: 0.4s ease-in-out;
+    }
+
+    .button:hover,button:hover{
+        cursor: pointer;
+        box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.3);
+    }
+
+    .login-card a{
+        background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+    .register-card a{
+        background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
 
     @media only screen and (max-width:1200px){
@@ -122,8 +199,8 @@
         }
 
         .loginForm{
-            margin:40px;
-            padding:50px;
+            margin:0;
+            padding:0;
         }
 
         ul{
@@ -139,40 +216,86 @@
         }
     }
 
+    @media only screen and (max-width:560px){
+        .loginRegister{
+            flex-wrap: wrap;
+            flex-direction: column;
+        }
+
+        .loginForm{
+            margin:0;
+            padding:0;
+        }
+
+        ul{
+            padding-inline-start: 0;
+        }
+
+        .loginRegister li{
+            font-size: 10px;
+        }
+
+        .loginRegister label{
+            margin: 30px 0px;
+        }
+
+        .login-card{
+            background-color: rgba(0, 0, 0, 0.2);
+            padding: 50px;
+            margin: 50px 30px;
+            width: auto;
+        }
+
+        .register-card{
+            background-color: rgba(0, 0, 0, 0.2);
+            padding: 50px;
+            margin: 50px 30px;
+            width: auto;
+        }
+    }
+
     </style>
     
 
 </head>
 <div class="loginRegister">
-    <div class = "loginForm">
-        <h1>Login</h1>
-        <form method="post">
-            {%csrf_token%}
-            <h4>Email Address</h4>
-            {{form.username}}
-            <h4>Password</h4>
-            {{form.password}}
-            <button value="Login" name="login" type="submit">Login</button>
-        </form>
+
+    <div class = "loginForm" id="login">
+        <div class="login-card">
+            <h1>Login</h1>
+            <form method="post">
+                {%csrf_token%}
+                <h4>Email Address</h4>
+                {{form.username}}
+                <h4>Password</h4>
+                {{form.password}}
+                <br>
+                <button value="Login" name="login" type="submit">Login</button>
+            </form>
+            <a href="#register">Don't have an account?</a>
+        </div>
     </div>
 
 
-    <div class = "registerForm">
-        <h1>Create an Account</h1>
-        <form method="post">
-            {%csrf_token%}
-            {{Register_form.errors}}
-            <h4>Email Address</h4>
-            {{Register_form.username}}
-            <h4>Password</h4>
-            {{Register_form.password1}}
-            <h4>Password Confirmation</h4>
-            {{Register_form.password2}}
-            <input type="submit" name="register" value="Register" class="button">
-            <!-- <div class="error-page">
-                <div class="try-again">Error: Try again?</div>
-            </div> -->
-        </form>
+    <div class = "registerForm" id ="register">
+        <div class="register-card" >
+            <h1>Create an Account</h1>
+            <form method="post">
+                {%csrf_token%}
+                {{Register_form.errors}}
+                <h4>Email Address</h4>
+                {{Register_form.username}}
+                <h4>Password</h4>
+                {{Register_form.password1}}
+                <h4>Password Confirmation</h4>
+                {{Register_form.password2}}
+                <input type="submit" name="register" value="Register" class="button">
+                <!-- <div class="error-page">
+                    <div class="try-again">Error: Try again?</div>
+                </div> -->
+            </form>
+            <a href="#login">Already have an account?</a>
+        </div>
     </div>
 </div>
 
