--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -79,7 +79,7 @@
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 font-size:20px;
-                padding: 40px 50px;
+                padding: 20px 30px;
                 font-weight: normal;
                 margin-block-start: 0;
                 margin-block-end: 0;
@@ -87,7 +87,12 @@
                 text-transform: none;
             }
 
-            #Shipping,#Billing{
+            #Shipping{
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+
+            #Billing{
                 flex-direction: row;
                 flex-wrap: wrap;
             }
@@ -236,6 +241,7 @@
 
     <div id = "Billing" class = "profile-tabcontent">
         {% for billing in billing_address %}
+        <input required type="hidden" name="billing_address" value="{{ userAdd.id}}"/> <br/>
         <input  type="hidden" name="billing_address" value="{{ billing.id}}"/> <h4><a href="{% url 'del_add' billing.id %}"><img src="{%static 'Raul/Icons/Icons_Small/baseline_delete_outline_white_18dp.png' %}"></a>  {{ billing.get_address}}</h4>
         
         {% endfor %}
